# minhash-rs

./: Cargo.toml  README.md  global-dedup.sh
examples/: fineweb_global_config.yaml
examples/all_dressed/: ad2_10x_pmr.sh  all_dressed_v2_10x.yaml  all_dressed_v2_1x.yaml  ed_stub.yaml  minhash_config.yaml
examples/simple_exact/: config.yaml
examples/simple_exact/input/: json_exact.jsonl
python/: data_reader.py  file_map_builder.py  orchestration.py  s5cmd_part_generator.py
src/: dup_aware_subsample.rs  exact_dedup.rs  io.rs  main.rs  s3.rs  storage.rs  uf.rs  uf_rush2.rs
