[package]
name = "minhash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.97"
zstd = "0.13.1"
glob = "0.3.1"
rand = "0.8"
clap = { version = "4.1.11", features = ["derive"] }
indicatif = "0.17.8"
flate2 = "1.0"
serde = { version = "1.0.198", features = ["derive"]}
tiktoken-rs = "0.5.8"
rustc-hash = "1.1.0"
regex = "1.10.4"
ndarray = "0.15.6"
rand_chacha = "0.3.1"
sha2 = "0.9"
bytemuck = "1.16.0"
dashmap = {version = "5.5.3", features=["rayon"]}
rayon = "1.10.0"
byteorder = "1.5.0"
serde_yaml = "0.9.34"
unicode-segmentation = "1.12.0"
ahash = "0.8.11"
mj_io = "0.1.2"
